fix ie6 form inputs wrapping

--- a/style/ie6_fixes.css
+++ b/style/ie6_fixes.css
@@ -11,3 +11,7 @@
 .mainnav li {
     zoom: 1;
 }
+
+#content fieldset label {
+    width: 110px;
+}
